changement du home en index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
           <p id="header_arrowLeft"><a href="contact.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
-          <p id="header_arrowBottom"><a href="home.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
+          <p id="header_arrowBottom"><a href="index.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
           <p id="header_arrowRight"><a href="project.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
         </div>
       </nav>
