Début d'actualisation en bootstrap, touche enter supprimée

--- a/cv.html
+++ b/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link type="text/css" rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
   <title>CV Jonathan Moroy</title>
 </head>
