--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link type="text/css" rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+  <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>Home Jonathan Moroy</title>
 </head>
 <body>
-  <div id="bloc_page">
-    <header>
-      <p id="header_title">Jonathan Moroy</p>
-      <p id="header_underTitle">web developer</p>
-      <p id="header_enter"><a href="#ink_enter"><img src="enter.png" alt="Entrée"></a></p>
+  <div id="bloc_page" class="container">
+    <header class="row">
+      <div class="col-lg-4 col-md-6 col-sm-8 col-xs-8">
+        <p id="header_title">Jonathan Moroy</p>
+        <div class="row">
+          <p class="col-lg-offset-4 col-md-offset-3 col-sm-offset-3 col-xs-offset-3" id="header_underTitle">web developer</p>
+        </div>
+      </div>
       <nav>
         <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
@@ -20,19 +26,6 @@
         </div>
       </nav>
     </header>
-    <section id="ink_enter">
-      <aside>
-        <p><img src="image/me.png" alt="Photo de Jonathan Moroy"></p>
-      </aside>
-      <div id="line">
-      </div>
-      <article>
-        <h1>Hello World !</h1>
-        <p>Actuellement apprenant à E2N en tant que développeur web.</p>
-      </article>
-    </section>
-    <footer>
-    </footer>
   </div>
 </body>
 </html>
