--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" media="screen and (max-width: 650px)" href="style.css" type="text/css"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Home Jonathan Moroy</title>
@@ -11,13 +12,13 @@
 <body>
   <div id="bloc_page" class="container">
     <header class="row">
-      <div class="col-lg-4 col-md-6 col-sm-8 col-xs-8">
+      <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
         <p id="header_title">Jonathan Moroy</p>
         <div class="row">
-          <p class="col-lg-offset-4 col-md-offset-3 col-sm-offset-3 col-xs-offset-3" id="header_underTitle">web developer</p>
+          <p class="col-lg-offset-4 col-md-offset-3 col-sm-offset-3 col-xs-offset-2" id="header_underTitle">web developer</p>
         </div>
       </div>
-      <nav>
+      <nav class="container">
         <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
           <p id="header_arrowLeft"><a href="contact.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
