--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" media="screen and (max-width: 650px)" href="style.css" type="text/css"/>
+  <link rel="stylesheet" media="screen and (max-width: 650px)" href="style.css" type="text/css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Home Jonathan Moroy</title>
