--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
-  <title>Contact Jonathan Moroy</title>
+  <meta name="viewport" content="width=device-width">
+  <title>Home Jonathan Moroy</title>
 </head>
 <body>
-  <div id="bloc_page">
-    <header>
-      <p id="header_title">Jonathan Moroy</p>
-      <p id="header_underTitle">web developer</p>
-      <nav>
+  <div id="bloc_page" class="container">
+    <header class="row">
+      <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+        <p id="header_title">Jonathan Moroy</p>
+        <div class="row">
+          <p class="col-lg-offset-4 col-md-offset-3 col-sm-offset-3 col-xs-offset-2" id="header_underTitle">web developer</p>
+        </div>
+      </div>
+      <nav class="container">
         <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
           <p id="header_arrowLeft"><a href="contact.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
@@ -19,16 +26,6 @@
         </div>
       </nav>
     </header>
-    <section>
-      <article class="">
-        <p>coucou</p>
-      </article>
-      <aside class="">
-
-      </aside>
-    </section>
-    <footer>
-    </footer>
   </div>
 </body>
 </html>
