Changement de la photo, ajout du texte dans l'article et mise en responsive

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -26,6 +26,18 @@
         </div>
       </nav>
     </header>
+    <section class="row">
+      <aside class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <p><img src="image/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+      </aside>
+
+      <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12" class="text-center">
+        <h1>Hello World !!</h1>
+        <p>Je m'appel Jonathan, j'ai 26 ans et je suis actuellement en formation à <strong>E2N</strong> (école numérique du Noyonnais).</p>
+        <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a href="cv.html">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a href="contact.html">contact</a> avec moi.</p>
+        <p><br>Merci de votre visite !</p>
+      </article>
+    </section>
   </div>
 </body>
 </html>
