--- a/index_En.html
+++ b/index_En.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="En">
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,11 +18,11 @@
         </div>
       </div>
       <nav class="container">
-        <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
+        <p id="header_arrowTop"><a href="cv_En.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
-          <p id="header_arrowLeft"><a href="contact.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
-          <p id="header_arrowBottom"><a href="index.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
-          <p id="header_arrowRight"><a href="project.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
+          <p id="header_arrowLeft"><a href="contact_En.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
+          <p id="header_arrowBottom"><a href="index_En.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
+          <p id="header_arrowRight"><a href="project_En.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
         </div>
       </nav>
     </header>
@@ -32,9 +32,9 @@
       </aside>
       <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12" class="text-center">
         <h1>Hello World !!</h1>
-        <p>Je m'appelle Jonathan, j'ai 26 ans et je suis actuellement en formation à <a id="e2n" href="http://formation.novei.fr/"><strong>E2N</strong></a> (école numérique du Noyonnais).</p>
-        <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a href="cv.html">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a href="contact.html">contact</a> avec moi.</p>
-        <p><br>Merci de votre visite !</p>
+        <p>My name is Jonathan, I am 26 years old and I am currently in training at<a id="e2n" href="http://formation.novei.fr/"><strong>E2N</strong></a> (digital school of Noyonnais).</p>
+        <p>My training ending on<em>4 August</em>, 2017 and strong of a training of six months (proposing a professional title<em>developer software level: III</em> in September) I will be available for all proposals at the end of it. Concerning my current and future skills, I will regularly update my <a href="cv_En.html">digital resume</a>, but for any additional questions do not hesitate to <a href="contact_En.html">contact</a> me.</p>
+        <p><br>Thanks for visiting !</p>
       </article>
     </section>
     <footer class="row">
