--- a/project_En.html
+++ b/project_En.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="En">
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
@@ -18,11 +18,11 @@
         </div>
       </div>
       <nav class="container">
-        <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
+        <p id="header_arrowTop"><a href="cv_En.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
-          <p id="header_arrowLeft"><a href="contact.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
-          <p id="header_arrowBottom"><a href="index.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
-          <p id="header_arrowRight"><a href="project.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
+          <p id="header_arrowLeft"><a href="contact_En.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
+          <p id="header_arrowBottom"><a href="index_En.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
+          <p id="header_arrowRight"><a href="project_En.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
         </div>
       </nav>
     </header>
