--- a/cv.html
+++ b/cv.html
@@ -26,6 +26,9 @@
         </div>
       </nav>
     </header>
+    <footer>
+      <p><a href="index.html">Français</a> / <a href="index_En.html">English</a></p>
+    </footer>
   </div>
 </body>
 </html>
