--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <p><br>Merci de votre visite !</p>
       </article>
     </section>
-    <footer class="row">
-      <p>Français / English</p>
+    <footer>
+      <p><a href="index.html">Français</a> / <a href="index_En.html">English</a></p>
     </footer>
   </div>
 </body>
