--- a/index_En.html
+++ b/index_En.html
@@ -37,7 +37,7 @@
         <p><br>Thanks for visiting !</p>
       </article>
     </section>
-    <footer>
+    <footer class="row">
       <p><a href="index.html">Français</a> / <a href="index_En.html">English</a></p>
     </footer>
   </div>
