--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
         </div>
       </nav>
     </header>
-    <footer>
+    <footer class="row">
       <p><a href="index.html">Français</a> / <a href="index_En.html">English</a></p>
     </footer>
   </div>
