Ajout de flag pour les langues et rectification d'une erreur après validator. Changement des links de languages entre les pages.

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       </nav>
     </header>
     <footer class="row">
-      <p><a href="index.html">Français</a> / <a href="index_En.html">English</a></p>
+      <p><a href="contact.html">Français <img src="image/fr_0.png" alt="Langue Française"></a> / <a href="contact_En.html">English <img src="image/uk_0.png" alt="English Language"></a></p>
     </footer>
   </div>
 </body>
