--- a/index_En.html
+++ b/index_En.html
@@ -38,15 +38,15 @@
       <aside class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <p><img src="image/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
       </aside>
-      <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12" class="text-center">
+      <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h1>Hello World !!</h1>
         <p>My name is Jonathan, I am 26 years old and I am currently in training at <a id="e2n" href="http://formation.novei.fr/"><strong>E2N</strong></a> (digital school of Noyonnais).</p>
-        <p>My training ending on<em>4 August</em>, 2017 and strong of a training of six months (proposing a professional title<em>developer software level: III</em> in September) I will be available for all proposals at the end of it. Concerning my current and future skills, I will regularly update my <a href="cv_En.html">digital resume</a>, but for any additional questions do not hesitate to <a href="contact_En.html">contact</a> me.</p>
+        <p>My training ending on <em>4 August</em>, 2017 and strong of a training of six months (proposing a professional title <em>developer software level: III</em> in September) I will be available for all proposals at the end of it. Concerning my current and future skills, I will regularly update my <a href="cv_En.html">digital resume</a>, but for any additional questions do not hesitate to <a href="contact_En.html">contact</a> me.</p>
         <p><br>Thanks for visiting !</p>
       </article>
     </section>
     <footer class="row">
-      <p><a href="index.html">Français</a> / <a href="index_En.html">English</a></p>
+      <p><a href="index.html">Français <img src="image/fr_0.png" alt="Langue Française"></a> / <a href="index_En.html">English <img src="image/uk_0.png" alt="English Language"></a></p>
     </footer>
   </div>
 </body>
