--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <aside class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <p><img src="image/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
       </aside>
-      <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12" class="text-center">
+      <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h1>Hello World !!</h1>
         <p>Je m'appelle Jonathan, j'ai 26 ans et je suis actuellement en formation à <a id="e2n" href="http://formation.novei.fr/"><strong>E2N</strong></a> (école numérique du Noyonnais).</p>
         <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a href="cv.html">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a href="contact.html">contact</a> avec moi.</p>
@@ -46,7 +46,7 @@
       </article>
     </section>
     <footer class="row">
-      <p><a href="index.html">Français</a> / <a href="index_En.html">English</a></p>
+      <p><a href="index.html">Français <img src="image/fr_0.png" alt="Langue Française"></a> / <a href="index_En.html">English <img src="image/uk_0.png" alt="English Language"></a></p>
     </footer>
   </div>
 </body>
