Ajout de ID pour différencier entre les différents html et début du de la page CV

--- a/cv.html
+++ b/cv.html
@@ -34,6 +34,14 @@
         </div>
       </nav>
     </header>
+    <section class="row">
+      <aside id="aside_cv" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p><img src="image/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+      </aside>
+      <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+
+      </article>
+    </section>
     <footer class="row">
       <p><a href="cv.html">Français <img src="image/fr_0.png" alt="Langue Française"></a> / <a href="cv_En.html">English <img src="image/uk_0.png" alt="English Language"></a></p>
     </footer>
