--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       </nav>
     </header>
     <section class="row">
-      <aside class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <p><img src="image/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
       </aside>
-      <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h1>Hello World !!</h1>
-        <p>Je m'appelle Jonathan, j'ai 26 ans et je suis actuellement en formation à <a id="e2n" href="http://formation.novei.fr/"><strong>E2N</strong></a> (école numérique du Noyonnais).</p>
-        <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a href="cv.html">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a href="contact.html">contact</a> avec moi.</p>
+        <p>Je m'appelle Jonathan, j'ai 26 ans et je suis actuellement en formation à <a id="e2n" href="http://formation.novei.fr/" target="_blank"><strong>E2N</strong></a> (école numérique du Noyonnais).</p>
+        <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a class="link_index" href="cv.html">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a class="link_index" href="contact.html">contact</a> avec moi.</p>
         <p><br>Merci de votre visite !</p>
       </article>
     </section>
