--- a/index_En.html
+++ b/index_En.html
@@ -35,13 +35,13 @@
       </nav>
     </header>
     <section class="row">
-      <aside class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <p><img src="image/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
       </aside>
-      <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h1>Hello World !!</h1>
-        <p>My name is Jonathan, I am 26 years old and I am currently in training at <a id="e2n" href="http://formation.novei.fr/"><strong>E2N</strong></a> (digital school of Noyonnais).</p>
-        <p>My training ending on <em>4 August</em>, 2017 and strong of a training of six months (proposing a professional title <em>developer software level: III</em> in September) I will be available for all proposals at the end of it. Concerning my current and future skills, I will regularly update my <a href="cv_En.html">digital resume</a>, but for any additional questions do not hesitate to <a href="contact_En.html">contact</a> me.</p>
+        <p>My name is Jonathan, I am 26 years old and I am currently in training at <a id="e2n" href="http://formation.novei.fr/" target="_blank"><strong>E2N</strong></a> (digital school of Noyonnais).</p>
+        <p>My training ending on <em>4 August</em>, 2017 and strong of a training of six months (proposing a professional title <em>developer software level: III</em> in September) I will be available for all proposals at the end of it. Concerning my current and future skills, I will regularly update my <a class="link_index" href="cv_En.html">digital resume</a>, but for any additional questions do not hesitate to <a class="link_index" href="contact_En.html">contact</a> me.</p>
         <p><br>Thanks for visiting !</p>
       </article>
     </section>
