Changement du title de chaque page et aside du cv terminé

--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home Jonathan Moroy</title>
+  <title>CV Jonathan Moroy</title>
 </head>
 <body>
   <div id="bloc_page" class="container">
@@ -37,9 +37,11 @@
     <section class="row">
       <aside id="aside_cv" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p><img src="image/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+        <p>Introduction</p>
+        <p>Passionné depuis mon plus jeune âge par la technologie et le multimédia, j'ai tout d'abord orientées mes études vers une filiére professionnelle (la plasturgie), avant de revenir vers l'informatique, domaine qui me tient particuliérement à coeur. Actuellement en formation chez E2N je prépare un titre professionnel developpeur logiciel. Je continue à acquérir de nouvelles compétences en dehors de la formation, notamment dans le domaine du montage vidéo.</p>
       </aside>
       <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
+        <p>Jonathan Moroy</p>
       </article>
     </section>
     <footer class="row">
