--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home Jonathan Moroy</title>
+  <title>Project Jonathan Moroy</title>
 </head>
 <body>
   <div id="bloc_page" class="container">
