Reorganisation de tout les fichiers dans un dossier assets et modification de tout les link et src sur les html et css

--- a/index_En.html
+++ b/index_En.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="En">
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Home Jonathan Moroy</title>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -12,9 +17,6 @@
   ga('create', 'UA-91910263-1', 'auto');
   ga('send', 'pageview');
   </script>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Home Jonathan Moroy</title>
 </head>
 <body>
   <div id="bloc_page" class="container">
@@ -26,17 +28,17 @@
         </div>
       </div>
       <nav class="container">
-        <p id="header_arrowTop"><a href="cv_En.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
+        <p id="header_arrowTop"><a href="cv_En.html"><img src="assets/img/arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
-          <p id="header_arrowLeft"><a href="contact_En.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
-          <p id="header_arrowBottom"><a href="index_En.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
-          <p id="header_arrowRight"><a href="project_En.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
+          <p id="header_arrowLeft"><a href="contact_En.html"><img src="assets/img/arrow/arrowLeft.png" alt="Contact"></a></p>
+          <p id="header_arrowBottom"><a href="index_En.html"><img src="assets/img/arrow/arrowBottom.png" alt="Home"></a></p>
+          <p id="header_arrowRight"><a href="project_En.html"><img src="assets/img/arrow/arrowRight.png" alt="Project"></a></p>
         </div>
       </nav>
     </header>
     <section class="row">
       <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <p><img src="image/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+        <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
       </aside>
       <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h1>Hello World !!</h1>
@@ -46,7 +48,7 @@
       </article>
     </section>
     <footer class="row">
-      <p><a href="index.html">Français <img src="image/fr_0.png" alt="Langue Française"></a> / <a href="index_En.html">English <img src="image/uk_0.png" alt="English Language"></a></p>
+      <p><a href="index.html">Français <img src="assets/img/fr_0.png" alt="Langue Française"></a> / <a href="index_En.html">English <img src="assets/img/uk_0.png" alt="English Language"></a></p>
     </footer>
   </div>
 </body>
