--- a/project.html
+++ b/project.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Project Jonathan Moroy</title>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -12,9 +17,6 @@
   ga('create', 'UA-91910263-1', 'auto');
   ga('send', 'pageview');
   </script>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Project Jonathan Moroy</title>
 </head>
 <body>
   <div id="bloc_page" class="container">
@@ -26,16 +28,16 @@
         </div>
       </div>
       <nav class="container">
-        <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
+        <p id="header_arrowTop"><a href="cv.html"><img src="assets/img/arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
-          <p id="header_arrowLeft"><a href="contact.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
-          <p id="header_arrowBottom"><a href="index.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
-          <p id="header_arrowRight"><a href="project.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
+          <p id="header_arrowLeft"><a href="contact.html"><img src="assets/img/arrow/arrowLeft.png" alt="Contact"></a></p>
+          <p id="header_arrowBottom"><a href="index.html"><img src="assets/img/arrow/arrowBottom.png" alt="Home"></a></p>
+          <p id="header_arrowRight"><a href="project.html"><img src="assets/img/arrow/arrowRight.png" alt="Project"></a></p>
         </div>
       </nav>
     </header>
     <footer class="row">
-      <p><a href="project.html">Français <img src="image/fr_0.png" alt="Langue Française"></a> / <a href="project_En.html">English <img src="image/uk_0.png" alt="English Language"></a></p>
+      <p><a href="project.html">Français <img src="assets/img/fr_0.png" alt="Langue Française"></a> / <a href="project_En.html">English <img src="assets/img/uk_0.png" alt="English Language"></a></p>
     </footer>
   </div>
 </body>
