--- a/cv.html
+++ b/cv.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-  <link rel="stylesheet" href="style.css">
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-91910263-1', 'auto');
-  ga('send', 'pageview');
-  </script>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>CV Jonathan Moroy</title>
+<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets/css/style.css">
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>CV Jonathan Moroy</title>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-91910263-1', 'auto');
+ga('send', 'pageview');
+</script>
 </head>
 <body>
   <div id="bloc_page" class="container">
@@ -26,26 +27,32 @@
         </div>
       </div>
       <nav class="container">
-        <p id="header_arrowTop"><a href="cv.html"><img src="arrow/arrowTop.png" alt="CV"></a></p>
+        <p id="header_arrowTop"><a href="cv.html"><img src="assets/img/arrow/arrowTop.png" alt="CV"></a></p>
         <div id="header_arrowBot">
-          <p id="header_arrowLeft"><a href="contact.html"><img src="arrow/arrowLeft.png" alt="Contact"></a></p>
-          <p id="header_arrowBottom"><a href="index.html"><img src="arrow/arrowBottom.png" alt="Home"></a></p>
-          <p id="header_arrowRight"><a href="project.html"><img src="arrow/arrowRight.png" alt="Project"></a></p>
+          <p id="header_arrowLeft"><a href="contact.html"><img src="assets/img/arrow/arrowLeft.png" alt="Contact"></a></p>
+          <p id="header_arrowBottom"><a href="index.html"><img src="assets/img/arrow/arrowBottom.png" alt="Home"></a></p>
+          <p id="header_arrowRight"><a href="project.html"><img src="assets/img/arrow/arrowRight.png" alt="Project"></a></p>
         </div>
       </nav>
     </header>
     <section class="row">
       <aside id="aside_cv" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p><img src="image/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+        <p><img src="assets/img/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
         <p>Introduction</p>
         <p>Passionné depuis mon plus jeune âge par la technologie et le multimédia, j'ai tout d'abord orientées mes études vers une filiére professionnelle (la plasturgie), avant de revenir vers l'informatique, domaine qui me tient particuliérement à coeur. Actuellement en formation chez E2N je prépare un titre professionnel developpeur logiciel. Je continue à acquérir de nouvelles compétences en dehors de la formation, notamment dans le domaine du montage vidéo.</p>
       </aside>
       <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p>Jonathan Moroy</p>
+        <ul>
+          <li><span class="fa fa-birthday-cake icone_info" aria-hidden="true"></span> 16 juillet 1990</li>
+          <li><span class="fa fa-home icone_info" aria-hidden="true"></span> 503 rue de la mairie, 60400 Appilly</li>
+          <li><span class="fa fa-phone icone_info" aria-hidden="true"></span> 06.09.33.21.96</li>
+          <li><span class="fa fa-at icone_info" aria-hidden="true"></span> jonathan.moroy@gmail.com</li>
+          <li><span class="fa fa-car icone_info" aria-hidden="true"></span> Permis B et véhicule</li>
+        </ul>
       </article>
     </section>
     <footer class="row">
-      <p><a href="cv.html">Français <img src="image/fr_0.png" alt="Langue Française"></a> / <a href="cv_En.html">English <img src="image/uk_0.png" alt="English Language"></a></p>
+      <p><a href="cv.html">Français <img src="assets/img/fr_0.png" alt="Langue Française"></a> / <a href="cv_En.html">English <img src="assets/img/uk_0.png" alt="English Language"></a></p>
     </footer>
   </div>
 </body>
