Ajout d'animation à font awesome

--- a/cv.html
+++ b/cv.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets/css/font-awesome-animation.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
@@ -43,11 +44,14 @@ ga('send', 'pageview');
       </aside>
       <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <ul>
-          <li><span class="fa fa-birthday-cake icone_info" aria-hidden="true"></span> 16 juillet 1990</li>
-          <li><span class="fa fa-home icone_info" aria-hidden="true"></span> 503 rue de la mairie, 60400 Appilly</li>
-          <li><span class="fa fa-phone icone_info" aria-hidden="true"></span> 06.09.33.21.96</li>
-          <li><span class="fa fa-at icone_info" aria-hidden="true"></span> jonathan.moroy@gmail.com</li>
-          <li><span class="fa fa-car icone_info" aria-hidden="true"></span> Permis B et véhicule</li>
+          <li><i class="fa fa-birthday-cake icone_info" aria-hidden="true"></i> 16 juillet 1990</li>
+          <li><i class="fa fa-home icone_info" aria-hidden="true"></i> 503 rue de la mairie, 60400 Appilly</li>
+          <li><i class="fa fa-phone icone_info" aria-hidden="true"></i> 06.09.33.21.96</li>
+          <li><i class="fa fa-car icone_info" aria-hidden="true"></i> Permis B et véhicule</li>
+          <li><i class="fa fa-at icone_info" aria-hidden="true"></i> jonathan.moroy@gmail.com</li>
+          <li><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i> Lien Linkedin</a></li>
+          <li><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i> Lien Twitter</a></li>
+          <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i> Lien Github</a></li>
         </ul>
       </article>
     </section>
