--- a/contact_En.html
+++ b/contact_En.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/font-awesome-animation.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
