--- a/index.html
+++ b/index.html
@@ -1,56 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/font-awesome-animation.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Home Jonathan Moroy</title>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-91910263-1', 'auto');
-  ga('send', 'pageview');
-  </script>
-</head>
-<body>
-  <div id="bloc_page" class="container">
-    <header class="row">
-      <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
-        <p id="header_title">Jonathan Moroy</p>
-        <div class="row">
-          <p class="col-lg-offset-4 col-md-offset-3 col-sm-offset-3 col-xs-offset-2" id="header_underTitle">web developer</p>
+    <head>
+        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="assets/css/font-awesome-animation.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <script src="assets/js/angular.js" type="text/javascript"></script>
+        <script src="assets/js/angular-route.js" type="text/javascript"></script>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Home Jonathan Moroy</title>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-91910263-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+    </head>
+    <body ng-app="resumeApp">
+        <div id="bloc_page" class="container" ng-controller="indexCtrl">
+            <div ng-include="header"></div>
+            <div ng-view></div>
+            <div ng-include="footer"></div>
         </div>
-      </div>
-      <nav class="container">
-        <p id="header_arrowTop"><a href="cv.html"><img src="assets/img/arrow/arrowTop.png" alt="CV"></a></p>
-        <div id="header_arrowBot">
-          <p id="header_arrowLeft"><a href="contact.html"><img src="assets/img/arrow/arrowLeft.png" alt="Contact"></a></p>
-          <p id="header_arrowBottom"><a href="index.html"><img src="assets/img/arrow/arrowBottom.png" alt="Home"></a></p>
-          <p id="header_arrowRight"><a href="project.html"><img src="assets/img/arrow/arrowRight.png" alt="Project"></a></p>
-        </div>
-      </nav>
-    </header>
-    <section class="row">
-      <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
-      </aside>
-      <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-        <h1>Hello World !!</h1>
-        <p>Je m'appelle Jonathan, j'ai 26 ans et je suis actuellement en formation à <a id="e2n" href="http://formation.novei.fr/" target="_blank"><strong>E2N</strong></a> (école numérique du Noyonnais).</p>
-        <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a class="link_index" href="cv.html">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a class="link_index" href="contact.html">contact</a> avec moi.</p>
-        <p><br>Merci de votre visite !</p>
-      </article>
-    </section>
-    <footer class="row">
-      <p><a href="index.html">Français <img src="assets/img/fr_0.png" alt="Langue Française"></a> / <a href="index_En.html">English <img src="assets/img/uk_0.png" alt="English Language"></a></p>
-    </footer>
-  </div>
-</body>
+        <script src="assets/js/app.js" type="text/javascript"></script>
+    </body>
 </html>
