--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div ng-include="footer"></div>
         </div>
         <script src="assets/js/app.js" type="text/javascript"></script>
+        <script src="assets/js/anim.js" type="text/javascript"></script>
         <script src="assets/js/script.js" type="text/javascript"></script>
     </body>
 </html>
