--- a/index.html
+++ b/index.html
@@ -30,9 +30,26 @@
     </head>
     <body ng-app="resumeApp">
         <div id="bloc_page" class="container" ng-controller="indexCtrl">
-            <div ng-include="header"></div>
+            <header class="row">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+                    <p id="header_title">Jonathan Moroy</p>
+                    <div class="row">
+                        <p class="col-lg-offset-4 col-md-offset-3 col-sm-offset-3 col-xs-offset-2" id="header_underTitle">web developer</p>
+                    </div>
+                </div>
+                <nav class="container">
+                    <p id="header_arrowTop"><a href="#!/resume"><img src="assets/img/arrow/arrowTop.png" alt="CV"/></a></p>
+                    <div id="header_arrowBot">
+                        <p id="header_arrowLeft"><a href="#!/contact"><img src="assets/img/arrow/arrowLeft.png" alt="Contact"/></a></p>
+                        <p id="header_arrowBottom"><a href="#!/home"><img src="assets/img/arrow/arrowBottom.png" alt="Home"/></a></p>
+                        <p id="header_arrowRight"><a href="#!/project"><img src="assets/img/arrow/arrowRight.png" alt="Project"/></a></p>
+                    </div>
+                </nav>
+            </header>
             <div ng-view></div>
-            <div ng-include="footer"></div>
+            <footer class="row">
+                <p><a href="" ng-click="switchFrench()">Français <img src="assets/img/fr_0.png" alt="Langue Française"/></a> / <a href="" ng-click="switchEnglish()">English <img src="assets/img/uk_0.png" alt="English Language"/></a></p>
+            </footer>
         </div>
         <script src="assets/js/app.js" type="text/javascript"></script>
         <script src="assets/js/script.js" type="text/javascript"></script>
