Changement des pac-gomme et mise en place d'un background black pour visuellement avoir vraiment le pacman qui gobe. Animation de base fini.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="assets/js/bootstrap.min.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Home Jonathan Moroy</title>
+        <title>Jonathan Moroy</title>
         <script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
