Ajout de meta descriptives

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>       
+        <meta name="description" content="CV numérique de Jonathan MOROY, Web Développeur junior. Compétences, Expériences, Formations, Documents officiels, et moyen de contact disponible. Available in English.">      
+        <meta name="keywords" content="Jonathan, Moroy, CV, Numérique, Web, Développeur">
         <title>Jonathan Moroy</title>
         <script>
             (function (i, s, o, g, r, a, m) {
