--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>       
         <meta name="description" content="CV numérique de Jonathan MOROY, Web Développeur junior. Compétences, Expériences, Formations, Documents officiels, et moyen de contact disponible. Available in English.">      
-        <meta name="keywords" content="Jonathan, Moroy, CV, Numérique, Web, Développeur">
-        <meta property="og:image" content="assets/img/thumb.jpg"/>
+        <meta property="og:image" content="https://jonathanmoroy.github.io/assets/img/home.jpg"/>
         <title>Jonathan Moroy</title>
         <script>
             (function (i, s, o, g, r, a, m) {
